--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">192.168.100.146</domain>
         <domain includeSubdomains="true">192.168.100.147</domain>
+        <domain includeSubdomains="true">192.168.100.141</domain>
+        <domain includeSubdomains="true">192.168.100.67</domain>
     </domain-config>
 </network-security-config>
